# g2p

./: .gitignore  LICENSE.txt  Pipfile  README.md  README.rst  setup.cfg  setup.py
src/g2p_en/: __init__.py  expand.py  g2p.debug.py  g2p.py
